fix scrollbar colors

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,16 @@
 :root {
     --primary: rgb(2, 27, 18);
     --secondary: rgb(161, 235, 185);
+    --faded-5: rgba(183, 255, 207, 0.05);
+    --faded-10: rgba(183, 255, 207, 0.1);
+    --faded-20: rgba(183, 255, 207, 0.2);
+    --faded-30: rgba(183, 255, 207, 0.3);
+    --faded-40: rgba(183, 255, 207, 0.4);
+    --faded-50: rgba(183, 255, 207, 0.5);
+    --faded-60: rgba(183, 255, 207, 0.6);
+    --faded-70: rgba(183, 255, 207, 0.7);
+    --faded-80: rgba(183, 255, 207, 0.8);
+    --faded-90: rgba(183, 255, 207, 0.9);
     --focus: rgb(154, 152, 152);
 }
 
@@ -12,11 +22,11 @@
     --color-primary: var(--primary);
     --color-secondary: var(--secondary);
     --color-focus: var(--focus);
-    --color-faded-5: rgba(183, 255, 207, 0.05);
-    --color-faded-30: rgba(183, 255, 207, 0.3);
-    --color-faded-70: rgba(183, 255, 207, 0.7);
-    --color-faded-90: rgba(183, 255, 207, 0.9);
-    --color-faded: rgba(183, 255, 207, 0.1);
+    --color-faded-5: var(--faded-5);
+    --color-faded-30: var(--faded-30);
+    --color-faded-70: var(--faded-70);
+    --color-faded-90: var(--faded-90);
+    --color-faded: var(--faded-10);
     --font-primary: var(--font-pp-neue-corp);
 
     --text-display-large: 147px;
@@ -77,44 +87,32 @@
         resize: none;
     }
 
+    /* SCROLLBAR STYLES */
+    /* Modern browsers with `scrollbar-*` support */
     @supports (scrollbar-color: auto) {
         * {
-            scrollbar-color: rgba(var(--secondary), 0.2)
-                rgba(var(--secondary), 0.2);
+            scrollbar-color: var(--faded-70) var(--primary);
             scrollbar-width: thin;
-            box-shadow: none;
         }
     }
 
-    *::-webkit-scrollbar {
-        width: 2px;
-        height: 2px;
-    }
-    #page-wrapper::-webkit-scrollbar-track {
-        background-color: rgba(var(--secondary), 0.2);
-        -webkit-box-shadow: none;
-    }
-    #page-wrapper::-webkit-scrollbar-thumb {
-        background-color: rgba(var(--secondary), 0.5);
-        width: 1rem;
-        height: 1rem;
-        -webkit-box-shadow: none;
-    }
+    /* Legacy browsers with `::-webkit-scrollbar-*` support */
+    @supports selector(::-webkit-scrollbar) {
+        *::-webkit-scrollbar {
+            width: 2px;
+            height: 2px;
+        }
 
-    #projects-menu::-webkit-scrollbar {
-        width: 5px;
-        height: 5px;
-    }
-
-    #projects-menu::-webkit-scrollbar-track {
-        background-color: rgba(var(--secondary), 0.2);
-        -webkit-box-shadow: none;
-    }
-    #projects-menu::-webkit-scrollbar-thumb {
-        background-color: rgba(var(--secondary), 0.5);
-        width: 1rem;
-        height: 1rem;
-        -webkit-box-shadow: none;
+        #page-wrapper::-webkit-scrollbar-track {
+            background-color: rgba(161, 235, 185, 0.2);
+            -webkit-box-shadow: none;
+        }
+        #page-wrapper::-webkit-scrollbar-thumb {
+            background-color: rgba(161, 235, 185, 0.5);
+            width: 1rem;
+            height: 1rem;
+            -webkit-box-shadow: none;
+        }
     }
 
     p {
@@ -127,14 +125,14 @@
         appearance: none;
         width: 6px; /* width of the thumb */
         height: 20px; /* height of the thumb */
-        background: rgba(var(--secondary), 1); /* thumb color */
+        background: var(--secondary); /* thumb color */
         cursor: pointer; /* cursor type on hover */
     }
 
     input[type='range']::-moz-range-thumb {
         width: 20px;
         height: 20px;
-        background: rgba(var(--secondary), 1);
+        background: var(--secondary);
         cursor: pointer;
     }
 
